--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -22,10 +22,16 @@ jobs:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       run: | 
-        echo "Iniciando login"
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "Finalizando login"
-        
+#        echo "Iniciando login"
+#        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+#        echo "Finalizando login"
+    - name: Build Docker Image
+      run: |
+        docker build -t marcopolomp3/docker-graphql:0.0.2 .
+    - name: Push Docker Image
+      run: |
+        docker push marcopolomp3/docker-graphql:0.0.2 
 
       
 #    - name: Build the Docker image
