--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -29,9 +29,11 @@ jobs:
     - name: Build Docker Image
       run: |
         docker build -t marcopolomp3/docker-graphql:0.0.2 .
+        docker build -t marcopolomp3/docker-graphql:latest .
     - name: Push Docker Image
       run: |
         docker push marcopolomp3/docker-graphql:0.0.2 
+        docker push marcopolomp3/docker-graphql:latest 
 
       
 #    - name: Build the Docker image
