--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "todo",
   "version": "1.1.1-rc-10",
   "description": "",
-  "author": "",
+  "author": "FHe",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
