--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,23 +30,26 @@ jobs:
       env:
         DOCKER_USER: ${{ secrets.DOCKER_USER }}
         DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-        NEW_VERSION: ${{ steps.versionBuild.outputs.version }}
         
       run: | 
         docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
-        echo "New version: $NEW_VERSION!!!!!"
+       
 #        echo "Iniciando login"
 #        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
 #        echo "Finalizando login"
 
-#    - name: Build Docker Image
-#      run: |
-#        docker build -t marcopolomp3/docker-graphql:0.0.2 .
-#        docker build -t marcopolomp3/docker-graphql:latest .
-#    - name: Push Docker Image
-#      run: |
-#        docker push marcopolomp3/docker-graphql:0.0.2 
-#        docker push marcopolomp3/docker-graphql:latest 
+    - name: Build Docker Image
+      env:
+        NEW_VERSION: ${{ steps.versionBuild.outputs.version }}
+      run: |
+        docker build -t marcopolomp3/docker-graphql:$NEW_VERSION .
+        docker build -t marcopolomp3/docker-graphql:latest .
+    - name: Push Docker Image
+      env:
+        NEW_VERSION: ${{ steps.versionBuild.outputs.version }}
+      run: |
+        docker push marcopolomp3/docker-graphql:$NEW_VERSION 
+        docker push marcopolomp3/docker-graphql:latest 
 
       
 #    - name: Build the Docker image
